# mcp-client

./: .gitignore  LICENSE  README.md  client.py  pyproject.toml
