[project]
name = "mcp-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.16",
    "anthropic>=0.49.0",
    "google-genai>=1.13.0",
    "google-generativeai>=0.8.5",
    "mcp>=1.6.0",
    "openai>=1.76.0",
    "python-dotenv>=1.1.0",
]
